samples/_failures_safe/1761728070_e3e2f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7401f00f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_7401f00f.c:170:29: error: expected ‘;’ at end of input
  170 |     dist[start_node->id] = 0
      |                             ^
      |                             ;
./samples/SAFE/__tmp_7401f00f.c:170:5: error: expected declaration or statement at end of input
  170 |     dist[start_node->id] = 0
      |     ^~~~
